<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="search_reply">Rechercher une réplique…</string>
    <string name="listen">Écouter</string>
    <string name="favorite">Favori</string>
    <string name="confirm">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="no_reply_available_no_text">Chou blanc donc…</string>
    <string name="favorite_list_title">Favoris</string>
    <string name="reply_list_title">Répliques</string>
    <string name="delete">Retirer</string>
    <string name="multi_listen">Écoute multiple</string>
    <string name="multi_listen_summary">8 répliques simultanées maximum</string>
    <string name="settings_title">Paramètres</string>
    <string name="easter_egg_url">https://duckduckgo.com/?q=oss+117+3&amp;kad=fr_FR</string>
    <string name="most_listened_reply">Réplique la plus écoutée</string>
    <string name="total_reply_time">Temps d\'écoute total</string>
    <string name="total_reply_time_text">%1$d h %2$d m %3$d s</string>
    <string name="random_reply">Ecouter une réplique aléatoire</string>
    <string name="reply_sort">Tri des répliques</string>
    <string name="random_order">Aléatoire</string>
    <string name="alphabetical_order">Ordre alphabétique</string>
    <string name="movie_order">Ordre du film</string>
    <string name="settings_label">Paramètres</string>
    <string name="stats_label">Statistiques</string>
    <string name="others_label">Autres</string>
    <string name="most_listened_reply_format">%s (%d)</string>
    <string name="reset_filters">Réinitialiser</string>
    <string name="results_indicator_zero">Chou blanc aussi</string>
    <plurals name="results_indicator_other">
        <item quantity="other">%d répliques</item>
        <item quantity="one">%d réplique</item>
    </plurals>
    <string name="share">Partager</string>
    <string name="ringtone">Utiliser comme sonnerie</string>
    <string name="share_title">Partager avec…</string>
    <string name="background_listen">Écoute en arrière-plan</string>
    <string name="background_listen_summary">Les répliques en cours continuent lorsque l\'application passe en arrière-plan</string>
    <plurals name="background_listen_notif_content">
        <item quantity="one">%d réplique en cours</item>
        <item quantity="other">%d répliques en cours</item>
    </plurals>
    <string name="single_filter_full_content_format"><b>%s</b> : %s</string>
    <plurals name="single_filter_content_limit_format">
        <item quantity="one">%s et %d autre</item>
        <item quantity="other">%s et %d autres</item>
    </plurals>
    <string name="filter_content_separator">\n</string>
    <string name="filter_reply">Filtrer</string>
    <string name="filter_characters">Personnages</string>
    <string name="filter_movies">Films</string>
    <string name="oss_2_movie_name">OSS 117 : Rio ne répond plus</string>
    <string name="oss_1_movie_name">OSS 117 : Le Caire, nid d\'espions</string>
    <string name="character_hubert_name">Hubert</string>
    <string name="character_dolores_name">Dolorès</string>
    <string name="character_armand_name">Armand</string>
    <string name="character_heinrich_name">Heinrich</string>
    <string name="character_bill_name">Bill</string>
    <string name="character_von_zimmel_name">Von Zimmel</string>
    <string name="character_chinese_brothers_name">Les Chinois</string>
    <string name="character_germans_name">Les Allemands</string>
    <string name="character_chinese_princess_name">Princesse Chinoise</string>
    <string name="character_carlota_name">Carlota</string>
    <string name="character_ledentu_name">Ledentu</string>
    <string name="character_mayeux_name">Mayeux</string>
    <string name="character_beach_woman_name">Femme plage</string>
    <string name="character_beach_man_name">Homme plage</string>
    <string name="character_bresilian_nurse_name">Infirmière</string>
    <string name="character_israeli_agents_name">Agents israéliens</string>
    <string name="character_others_name">Autres</string>
    <string name="character_von_umpsrung_name">Colonel Von Umpsrung</string>
    <string name="character_jack_name">Jack Jefferson</string>
    <string name="cestgentil_title">C\'est gentil</string>
    <string name="cestgentil_desc">C\'est gentil…</string>
    <string name="no_listened_reply">Aucune</string>
    <string name="mrleeteditbonjour_title">Mr Lee te dit bonjour</string>
    <string name="mrleeteditbonjour_desc">- Mr Lee te dit bonjour.\n- C\'est gentil.\n- Et au revoir aussi ! Ahahahahah…
    </string>
    <string name="ahahah_title">Ahahah !</string>
    <string name="ahahah_desc">Ahahahahah ! You stupid son of a bitch !</string>
    <string name="ahautempspourmoi_title">Ah, au temps pour moi…</string>
    <string name="ahautempspourmoi_desc">Ah, au temps pour moi…</string>
    <string name="ahelleestpasmalcellela_title">Elle est pas mal celle-là !</string>
    <string name="ahelleestpasmalcellela_desc">Ah, elle est pas mal celle-là !</string>
    <string name="ahmafoi_title">Ah, ma foi…</string>
    <string name="ahmafoi_desc">Ah, ma foi…</string>
    <string name="arrogancedevotrebeaute_title">Arrogance de votre beauté</string>
    <string name="arrogancedevotrebeaute_desc">C\'est l\'inexpugnable arrogance de votre beauté qui m\'asperge</string>
    <string name="bahvlaautrechose_title">Bah v\'là aut\' chose…</string>
    <string name="bahvlaautrechose_desc">Bah voilà autre chose…</string>
    <string name="bonjourbonjour_title">Bonjour bonjour !</string>
    <string name="bonjourbonjour_desc">Bonjour bonjour !</string>
    <string name="borgeborgeborge_title">Borges, Borges, Borges…</string>
    <string name="borgeborgeborge_desc">Borges, Borges, Borges… Qu\'est-ce que tu veux qu\'il dise ?</string>
    <string name="bresiliennes_title">Brésiliennes</string>
    <string name="bresiliennes_desc">Crois-moi ou non Bill, je suis venu ici pour les femmes et les plages. On m\'en a
        vanté les charmes. Et je tenais à vérifier ce qu\'on dit sur les Brésiliennes.
    </string>
    <string name="cochinchine_title">J\'ai vécu en Cochinchine !</string>
    <string name="cochinchine_desc">Mais non ! Mais je vous jure que non ! J\'ai même longtemps vécu en Cochinchine.
    </string>
    <string name="commeunlundi_title">Comme un Lundi !</string>
    <string name="commeunlundi_desc">Ma foi, comme un Lundi, frais dans la matinée, soleil l\'après-midi, la recette des
        sports d\'hiver réussis.
    </string>
    <string name="enfaitilladit_title">En effet, il l\'a dit !</string>
    <string name="enfaitilladit_desc">En effet, il l\'a dit… Il l\'a dit.</string>
    <string name="enfileconfortable_title" tools:ignore="Typos">Quelque chose de confortable</string>
    <string name="enfileconfortable_desc" tools:ignore="Typos">Moi aussi je vais enfiler quelque chose de…
        confortable.
    </string>
    <string name="enpleindansledos_title">En plein dans le dos !</string>
    <string name="enpleindansledos_desc">- En plein dans le dos !\n- T\'as vu ça ?</string>
    <string name="erreursurlapersonne_title">Erreur sur la personne</string>
    <string name="erreursurlapersonne_desc">Pas le moins du monde. Il aura fait une erreur sur la personne voilà tout.
    </string>
    <string name="etborgeilenditquoi_title">Et Borges, il en dit quoi ?</string>
    <string name="etborgeilenditquoi_desc">- Et Borges, il en dit quoi ?\n- Borges, Borges, Borges… Qu\'est-ce que tu veux
        qu\'il dise ? Il dit comme Favre… Et comme Duvernoy, d\'ailleurs.
    </string>
    <string name="explorerunepartie_title">Si intime soit-elle…</string>
    <string name="explorerunepartie_desc">Ah, ma foi… Il ne tient qu\'à vous de m\'en laisser explorer une partie. Si
        intime soit-elle…
    </string>
    <string name="faireuncourrier_title">J\'vais lui faire un courrier</string>
    <string name="faireuncourrier_desc">Je vais lui faire un courrier.</string>
    <string name="franquart_title">Franquart</string>
    <string name="franquart_desc">Je crois même qu\'il y avait Franquart, c\'est pour te dire !</string>
    <string name="guetapens_title">Guet-Apens !</string>
    <string name="guetapens_desc">Qu\'est-ce que c\'est que ce guet-apens ?</string>
    <string name="ilssontperdus_title">Ils sont perdus…</string>
    <string name="ilssontperdus_desc">Ils sont perdus…</string>
    <string name="jtapelleraisbill_title">Je t\'appellerai Bill</string>
    <string name="jtapelleraisbill_desc">- Je t\'appellerai Bill… Si l\'office du tourisme est fermé !\n- Shut up, kiss my
        ass.\n- D\'accord, faisons comme ça. Ravi de t\'avoir revu l\'ami.
    </string>
    <string name="kissmyass_title">Kiss My Ass !</string>
    <string name="kissmyass_desc">- Kiss my ass !\n- D\'accord. Faisons comme ça.</string>
    <string name="lesptfontcatresbien_title"><![CDATA[Les P&T font ça très bien…]]></string>
    <string name="lesptfontcatresbien_desc"><![CDATA[Les P&T font ça très bien.]]></string>
    <string name="lessalesjaunes_title">Les sales jaunes !</string>
    <string name="lessalesjaunes_desc">Les sales jaunes !</string>
    <string name="lessalesrougesnanlessalesjaunes_title">Les sales rouges/jaunes</string>
    <string name="lessalesrougesnanlessalesjaunes_desc">- Les sales rouges…\n- Les sales jaunes !\n- Non, les sales rouges.
       \n- Ah au temps pour moi.
    </string>
    <string name="maisjevousenprie_title">Mais je vous en prie…</string>
    <string name="maisjevousenprie_desc">Mais je vous en prie… D\'ailleurs ne dit-on pas qu\'une femme qui éclabousse un
        homme c\'est un peu comme la rosée d\'une matinée de printemps ? C\'est la promesse d\'une belle journée et la
        perspective d\'une soirée enflammée.
    </string>
    <string name="malcsmfsoab_title">MALCSMFSOAB</string>
    <string name="malcsmfsoab_desc">Comme tu voudras my ass licking cock sucker motherfucking son of a bitch ! Ahahahah
        !
    </string>
    <string name="memepas_title">Même pas</string>
    <string name="memepas_desc">Même pas.</string>
    <string name="montehubert_title">Monte Yubeurt !</string>
    <string name="montehubert_desc">- Monte Yubeurt, ahahah !\n- Bill Tremendous ! Ce vieux Bill !</string>
    <string name="obregado_title">Obregado !</string>
    <string name="obregado_desc">Obregado ! Obregado…</string>
    <string name="onafrolelacatastrophe_title">On a frôlé la catastrophe</string>
    <string name="onafrolelacatastrophe_desc">On a frôlé la catastrophe.</string>
    <string name="plaitil_title">Plaît-il ?</string>
    <string name="plaitil_desc">Plaît-il ?</string>
    <string name="pointdevue_title">De son point de vue…</string>
    <string name="pointdevue_desc" tools:ignore="Typos">- N\'oublions pas que de son point de vue nous nous ressemblons
        tous…\n- You got a point there motherfucker.
    </string>
    <string name="procedurehabituelle_title">Procédure habituelle</string>
    <string name="procedurehabituelle_desc">- Procédure habituelle ?\n- Procédure habituelle.</string>
    <string name="quelputainchaleur_title">Quelle poutain chaleur</string>
    <string name="quelputainchaleur_desc">Ah, quelle putain chaleur ! Oh !</string>
    <string name="sacrehubert_title">Sacré Yubert !</string>
    <string name="sacrehubert_desc">Ah sacré Yubert ! Toujours le mot pour rire !</string>
    <string name="semefierdeschinois_title">Méfiez-vous de Mr Lee…</string>
    <string name="semefierdeschinois_desc">Mais à l\'avenir vous devriez vous méfier de Mr Lee. Et des chinois en
        général d\'ailleurs.
    </string>
    <string name="technologieamericaine_title">Technologie Américaine !</string>
    <string name="technologieamericaine_desc">Technologie américaine.</string>
    <string name="toctoctoc_title" tools:ignore="Typos">Toc toc toc !</string>
    <string name="toctoctoc_desc" tools:ignore="Typos">Toc toc toc !</string>
</resources>